# mkdocs

./: 404.html  LICENSE  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
0xfffff/: index.html
0xfffff/languages/: index.html
0xfffff/languages/cp/: index.html
0xfffff/languages/cs/: index.html
0xfffff/languages/go/: index.html
0xfffff/languages/ja/: index.html
0xfffff/languages/js/: index.html
0xfffff/latex/: index.html
about/: index.html
about/mkdocs/: index.html
about/page-2/: index.html
collections/: index.html
collections/android/: index.html
collections/ios/: index.html
collections/page-1/: index.html
collections/page-2/: index.html
collections/website/: index.html
collections/windows/: index.html
docs/: index.md  tags.md
docs/about/: index.md  mkdocs.md  page-2.md
docs/collections/: android.md  index.md  ios.md  page-1.md  page-2.md  website.md  windows.md
docs/javascripts/: mathjax.js
docs/minecraft/: index.md  mods.md  resource_packs.md  shaderpacks.md
docs/numbers/: index.md
docs/stylesheets/: extra.css
docs/tools/: index.md  page-1.md
latex/: index.html
latex/pgfplots/: index.html
latex/tikz_euclide/: index.html
minecraft/: index.html
minecraft/mods/: index.html
minecraft/others/: index.html
minecraft/resource_packs/: index.html
minecraft/shaderpacks/: index.html
numbers/: index.html
overrides/: main.html
search/: search_index.json
stylesheets/: extra.css
tags/: index.html
tools/: index.html
tools/page-1/: index.html
tools/page-2/: index.html
(+12 files in other folders)
