[tool.poetry]
name = "my-mkdocs"
version = "0.1.0"
description = ""
authors = ["黎黎 <32128684+Palpitation-github@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.5.2"
mkdocs-git-revision-date-localized-plugin = "^1.2.1"
mkdocs-git-committers-plugin-2 = "^2.2.2"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
